--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="modal-content">
             <h1 class="title">Luz roja Luz verde</h1>
             <p class="info">
-                Top ball is Player 1, bottom ball is Player 2.
-                Player 1 can press <b>Up Arrow</b> to move player 2 can press <b>w</b> to move.
-                Rules are same as it was in squid game.
+                LLeva la cripto moneda de derecha a izquierda.
+                Utiliza el teclado <b>flecha hacia arriba</b> para avanzar <b>w</b>.
+                La regla es la misma que en el juego del calmar.
             </p>
             <button class="start-btn">cargando...</button>
         </div>
