--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h1 class="title">Luz roja Luz verde</h1>
             <p class="info">
                 LLeva la cripto moneda de derecha a izquierda.
-                Utiliza el teclado <b>flecha hacia arriba</b> para avanzar <b>w</b>.
+                Utiliza el teclado <b>flecha izquierda</b> para avanzar <b></b>.
                 La regla es la misma que en el juego del calmar.
             </p>
             <button class="start-btn">cargando...</button>
